--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,6 +1,5 @@
 <footer th:fragment="footer">
-    <div class="footer-content">
-        <p>Developed By - <strong>Medhansh Sharma</strong></p>
+    <div class="footer-content">PIYUSH & VIJAY</strong></p>
         <p>
             <button><a href="https://www.linkedin.com/in/medhansh-sharma-a3a9a2284/" target="_blank" class="linkedin-link">Connect with me on LinkedIn <i class="fa-brands fa-linkedin"></i></a></button>
         </p>
