--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>PaperPal</title>
+        <title>CampusQuest</title>
 
         <!-- Default dark theme -->
         <link rel="icon" href="/images/logo.png">
@@ -16,11 +16,11 @@
     <body>
 <div id="pc">
     <nav class="navbar">
-        <a href="#" class="navbar-brand">PaperPal</a>
+        <a href="#" class="navbar-brand">CampusQuest</a>
         <div class="navbar-links">
-            <a href="https://github.com/Medhansh-32">GitHub</a><br>
-            <a href="https://github.com/Medhansh-32/PaperPal/blob/main/README.md">Description</a><br>
-            <a href="mailto:sharmamedhansh21@gmail.com">FeedBack</a>
+            <a href="https://github.com/EminenceIsHere">GitHub</a><br>
+            <a href="https://github.com/EminenceIsHere/CampusQuest/blob/main/README.md">Description</a><br>
+            <a href="mailto:rashpratap1793@gmail.com">FeedBack</a>
 
         </div>
         <a href="javascript:void(0)" onclick="toggleTheme()" id="theme-toggle" class="button">Theme <i class="fa-solid fa-circle-half-stroke"></i></a>
@@ -31,15 +31,15 @@
 <!-- Mobile navigation -->
 <div id="mobile">
     <nav class="navbarmini">
-        <a href="#" class="navbar-brandmini" style="font-size: 2.6rem">PaperPal</a>
+        <a href="#" class="navbar-brandmini" style="font-size: 2.6rem">CampusQuest</a>
         <!-- Dropdown for mobile using checkbox -->
         <div id="dropdown-container">
             <input type="checkbox" id="dropdown-checkbox">
             <label class="dropdown-label" for="dropdown-checkbox"><i class="fa-solid fa-bars"></i></label>
             <ul class="dropdown-list">
-                <li><a href="https://github.com/Medhansh-32">GitHub</a></li>
-                <li><a href="https://github.com/Medhansh-32/PaperPal/blob/main/README.md">Description</a></li>
-                <li><a href="mailto:sharmamedhansh21@gmail.com">FeedBack</a></li>
+                <li><a href="https://github.com/EminenceIsHere">GitHub</a></li>
+                <li><a href="https://github.com/EminenceIsHere/CampusQuest/blob/main/README.md">Description</a></li>
+                <li><a href="mailto:rashpratap1793@gmail.com">FeedBack</a></li>
                 <li><a href="/logout" class="logout">Logout <i class="fa-solid fa-arrow-right-from-bracket"></i></a></li>
             </ul>
         </div>
