--- a/src/main/resources/templates/deleteresponse.html
+++ b/src/main/resources/templates/deleteresponse.html
@@ -14,11 +14,11 @@
 <!-- Desktop navigation -->
 <div id="pc">
     <nav class="navbar">
-        <a href="#" class="navbar-brand">PaperPal</a>
+        <a href="#" class="navbar-brand">CampusQuest</a>
         <div class="navbar-links">
-            <a href="https://github.com/Medhansh-32">GitHub</a><br>
-            <a href="https://github.com/Medhansh-32/PaperPal/blob/main/README.md">Description</a><br>
-            <a href="mailto:sharmamedhansh21@gmail.com">FeedBack</a>
+            <a href="https://github.com/EminenceIsHere">GitHub</a><br>
+            <a href="https://github.com/EminenceIsHere/CampusQuest/blob/main/README.md">Description</a><br>
+            <a href="mailto:rashpratap1793@gmail.com">FeedBack</a>
 
         </div>
         <a href="/" class="button">Home <i class="fa-sharp fa-solid fa-house"></i></a>
@@ -31,15 +31,15 @@
 <!-- Mobile navigation -->
 <div id="mobile">
     <nav class="navbarmini">
-        <a href="#" class="navbar-brandmini" style="font-size: 2rem">PaperPal</a>
+        <a href="#" class="navbar-brandmini" style="font-size: 2rem">CampusQuest</a>
         <!-- Dropdown for mobile using checkbox -->
         <div id="dropdown-container">
             <input type="checkbox" id="dropdown-checkbox">
             <label class="dropdown-label" for="dropdown-checkbox"><i class="fa-solid fa-bars"></i></label>
             <ul class="dropdown-list">
-                <li><a href="https://github.com/Medhansh-32">GitHub</a></li>
-                <li><a href="https://github.com/Medhansh-32/PaperPal/blob/main/README.md">Description</a></li>
-                <li><a href="mailto:sharmamedhansh21@gmail.com">FeedBack</a></li>
+                <li><a href="https://github.com/EminenceIsHere">GitHub</a></li>
+                <li><a href="https://github.com/EminenceIsHere/CampusQuest/blob/main/README.md">Description</a></li>
+                <li><a href="mailto:rashpratap1793@gmail.com">FeedBack</a></li>
                 <li><a href="/logout" class="button">Logout <i class="fa-solid fa-arrow-right-from-bracket"></i></a></li>
             </ul>
         </div>
@@ -83,9 +83,9 @@
 </div>
 <footer>
     <div class="footer-content">
-        <p>Developed By - <strong>Medhansh Sharma</strong></p>
+        <p>Developed By - <strong>Vijay & Piyush</strong></p>
         <p>
-            <a href="https://www.linkedin.com/in/medhansh-sharma-a3a9a2284/" target="_blank" class="linkedin-link">Connect with me on LinkedIn <i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/piyush patel/" target="_blank" class="linkedin-link">Connect with me on LinkedIn <i class="fa-brands fa-linkedin"></i></a>
         </p>
         <p>
             Upload papers if you have and contribute in helping juniors.
