--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,7 +15,7 @@
 
 <!-- Navbar -->
 <div class="navbar">
-    <h1>PaperPal</h1>
+    <h1>CampusQuest</h1>
 </div>
 
 <div class="container">
@@ -46,7 +46,7 @@
     </a>
 </div>
 <footer>
-    <p>&copy; 2024 PaperPal. All rights reserved.</p>
+    <p>&copy; 2025 CampusQuest. All rights reserved.</p>
 </footer>
 
 </body>
