--- a/src/main/resources/templates/newpassword.html
+++ b/src/main/resources/templates/newpassword.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="navbar">
-    <h1>PaperPal</h1>
+    <h1>CampusQuest</h1>
 </div>
 <div class="container">
     <h2>Set New Password</h2>
