--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -16,7 +16,7 @@
 </nav>
 
 <form id="registerForm" method="POST">
-    <h2>Welcome to PaperPal</h2>
+    <h2>Welcome to CampusQuest</h2>
     <h3>Your Companion for All Your Writing Needs</h3>
     <hr>
     <br>
