--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -1,6 +1,6 @@
 <title>Upload User Response</title>
 <link id="theme-style" rel="stylesheet" href="/css/style-dark.css">
-<link rel="icon" href="/images/logo.png" alt="PaperPal Logo">
+<link rel="icon" href="/images/logo.png" alt="CampusQuest Logo">
 <div th:replace="~{fragments/navbar2 :: navbar2}"></div>
 
 
